--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "dependencies": {
     "express": "^5.1.0",
     "express-handlebars": "^8.0.2",
+    "mongoose": "^8.17.1",
+    "mongoose-paginate-v2": "^1.9.1",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
