--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "express": "^5.1.0",
     "express-handlebars": "^8.0.2",
+    "method-override": "^3.0.0",
     "mongoose": "^8.17.1",
     "mongoose-paginate-v2": "^1.9.1",
     "socket.io": "^4.8.1"
